--- a/SmartMirror.GUI/App.xaml
+++ b/SmartMirror.GUI/App.xaml
@@ -1,8 +1,13 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:clock="clr-namespace:SmartMirror.GUI.Clock"
              x:Class="SmartMirror.GUI.App">
-    <Application.Styles>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
-    </Application.Styles>
+  <Application.Styles>
+    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+  </Application.Styles>
+  
+  <Application.Resources>
+    <clock:ClockViewModel x:Key="clockViewModel"/>
+  </Application.Resources>
 </Application>
